native_llvm_path = get_option('native_llvm_path')
# Prefer absolute LLVM prefixes for llvm-config / -L. include_directories() still
# needs a path relative to this file when the prefix sits inside the source tree
# (e.g. managed cache under <source>/.cache/managed).
if not native_llvm_path.startswith('/')
  native_llvm_path = join_paths(meson.project_source_root(), native_llvm_path)
endif
llvm_include_path_darwin = include_directories(fs.relative_to(
  join_paths(native_llvm_path, 'include'),
  meson.current_source_dir(),
))

llvm_ld_flags_darwin = [
  '-L'+join_paths(native_llvm_path, 'lib'),
  '-lm', '-lz', '-lcurses', '-lxml2'
]

if native_llvm_path.startswith('/usr/local/opt') or native_llvm_path.startswith('/opt/homebrew/opt')
  llvm_homebrew_prefix = native_llvm_path.startswith('/opt/homebrew/opt') ? '/opt/homebrew/opt' : '/usr/local/opt'
  llvm_ld_flags_darwin = [
    llvm_ld_flags_darwin,
    join_paths(llvm_homebrew_prefix, 'zstd/lib/libzstd.a'),
    join_paths(native_llvm_path, 'lib/libunwind.a')
  ]
endif

airconv_lib_darwin = static_library('airconv', airconv_src,
  include_directories : [ dxmt_include_path, llvm_include_path_darwin ],
  cpp_args            : [ airconv_args ],
  dependencies        : [ dxbc_parser_native_dep, dxil_parser_native_dep ],
  link_args           : llvm_ld_flags_darwin,
  native              : dxmt_crossbuild
)

airconv_dep_darwin = declare_dependency(
  link_with           : [ airconv_lib_darwin ],
  include_directories : [ dxmt_include_path, include_directories('..') ],
  link_args           : [ llvm_ld_flags_darwin, llvm_deps ] # meh
)

airconv_dx12_metal4_lib_darwin = static_library('airconv_dx12_metal4', airconv_dx12_metal4_src,
  include_directories : [ dxmt_include_path, llvm_include_path_darwin ],
  cpp_args            : [ airconv_args ],
  dependencies        : [ dxbc_parser_native_dep, dxil_parser_native_dep ],
  link_args           : llvm_ld_flags_darwin,
  native              : dxmt_crossbuild
)

airconv_dx12_metal4_dep_darwin = declare_dependency(
  link_with           : [ airconv_dx12_metal4_lib_darwin ],
  include_directories : [ dxmt_include_path, include_directories('..') ],
  link_args           : [ llvm_ld_flags_darwin, llvm_deps ]
)

airconv_cli_darwin = executable('airconv', airconv_src + airconv_cli_src,
  include_directories : [ dxmt_include_path, llvm_include_path_darwin ],
  cpp_args            : [ airconv_args ],
  dependencies        : [ dxbc_parser_native_dep, dxil_parser_native_dep ],
  link_args           : [ llvm_ld_flags_darwin, llvm_deps ],
  native              : dxmt_crossbuild
)
